address page complate

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -113,3 +113,29 @@ body {
 .input-placeholder {
     color: #CCC;
 }
+
+.field {
+    position: relative;
+    padding: 0 20rpx;
+    display: flex;
+    align-items: center;
+    &:after {
+        content: '';
+        position: absolute;
+        left: 0; right: 0; bottom: 0;
+        height: 3rpx;
+        background-color: #EEE;
+    }
+    .field-left {
+        width: 200rpx;
+    }
+    .filed-right {
+        flex-grow: 1;
+        display: flex;
+        align-items: stretch;
+        border: none;
+        input {
+            width: 100%;
+        }
+    }
+}
