address page complate

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -45,7 +45,9 @@
 .f-strong {
     font-weight: 800;
 }
-
+.mb-20 {
+    margin-bottom: 20px;
+}
 body {
     color: #353535;
     font-size: 30rpx;
